scroll snap added

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,1 +1,8 @@
-<p>main-content works!</p>
+<div class="main_content">
+<app-above-the-folder></app-above-the-folder>
+<app-about-me></app-about-me>
+<app-competences></app-competences>
+<app-work></app-work>
+<app-reviews></app-reviews>
+<app-contact></app-contact>
+</div>
