--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,7 @@
     font-weight: 400;
     src: url('./../public/assets/fonts/quicksand/quicksand-v31-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
+
+  * {
+    margin:0;
+  }
