--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -1,6 +1,67 @@
-p {
-    background-color: red;
+section {
+    background-color: rgb(103 154 172);
     height: 100vh;
     width: 100%;
     scroll-snap-align: start;
+}
+
+.navbar {
+    height: 88px;
+    padding: 24px 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1440px;
+}
+
+svg {
+    path {
+        fill: red;
+    }
+}
+
+.icons {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
+.menu {
+    display: flex;
+    width: 88px;
+    height: 40px;
+    gap: 16px;
+}
+
+.content {
+    max-width: 1440px;
+    padding-left: 72px;
+    padding-right: 72px;
+    height: calc(100vh - 88px);
+    display: flex;
+}
+
+.atf_left {
+    width: 456px;
+    height: 304px;
+    margin-left: 40px;
+    margin-top: 72px;
+    display: flex;
+    flex-direction: column;
+    >.text {
+        color: #F8F7E5;
+        >span {
+            font-size: 48px;
+            line-height: 48px;
+            font-weight: 400;  
+        }
+        >h1 {
+            font-size: 96px;
+            line-height: 96px;
+            font-weight: 700;
+        }
+    }
+    >img {
+        
+    }
 }
