--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,4 +18,13 @@
 
   * {
     margin:0;
+    box-sizing: border-box;
+  }
+
+  .fontQuicksand {
+    font-family: 'Quicksand';
+  }
+
+  .fontEckzar {
+    font-family: 'Eczar';
   }
