--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -1,6 +1,6 @@
-.main_content{
-    scroll-snap-type: y mandatory;
-    height: 100vh; /* was 100% */
-    overflow: auto; /* added */
-    scroll-behavior: smooth;
-}
+// .main_content{
+//     scroll-snap-type: y mandatory;
+//     height: 100vh; /* was 100% */
+//     overflow: auto; /* added */
+//     scroll-behavior: smooth;
+// }
