--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -1,6 +1,6 @@
-p {
+section {
+    background-color: #679AAC;
     height: 100vh;
     width: 100%;
-    background-color: violet;
     scroll-snap-align: start;
 }
