--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -22,7 +22,7 @@ section {
 }
 
 .content {
-    width: 100%;
+    max-width: 1440px;
     max-width: 1440px;
     padding-left: 72px;
     padding-right: 72px;
@@ -30,6 +30,9 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    >img {
+        margin-left: 40px;
+    }
 }
 
 .right_side {
@@ -41,12 +44,6 @@ h2 {
     font-size: 72px;
     font-weight: 700;
     color: #1D1D1D;
-}
-
-.scroll_bar {
-    display: block;
-    margin-top: auto;
-    margin-bottom: auto;
 }
 
 .text_over {
