--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -1,5 +1,5 @@
 section {
-    background-color: rgb(103 154 172);
+    background-color: #679aac;
     height: 100vh;
     width: 100%;
     scroll-snap-align: start;
@@ -61,15 +61,16 @@ section {
     }
     >img {
         height: 144px;
+        &:hover {
+            transform: rotate(360deg);
+            transition-duration: 4000ms;
+            transition-timing-function: linear;
+        }
     }
 }
 
-.scroll_ball {
-    margin-top: 24px;
-}
-
 .atf_right {
-    height: calc(100% - 88px);
+    height: 100%;
     width: 740px;
     position: relative;
     display: flex;
@@ -78,19 +79,15 @@ section {
 
 .sun {
     position: absolute;
-    top: 350;
+    top: 190px;
+    right: 110px;
     height: 350px;
     z-index: 5;
 }
 .my_foto {
     position: absolute;
     bottom: 0;
+    right: 110px;
     height: 100%;
     z-index: 10;
-}
-
-.scroll_bar {
-    display: block;
-    margin-top: auto;
-    margin-bottom: auto;
 }
