--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -1,1 +1,48 @@
-<p>competences works!</p>
+<section>
+    <div class="navbar">
+        <div class="name">
+            <span>Lambeinova</span>
+        </div>
+        <div class="menu">
+            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0.5" y="0.5" width="39" height="39" rx="19.5" stroke="#F8F7E5"/>
+                <path d="M10.376 14.4H16.604C16.856 14.4 17.066 14.484 17.234 14.652C17.414 14.82 17.504 15.03 17.504 15.282C17.504 15.534 17.414 15.738 17.234 15.894C17.066 16.05 16.856 16.128 16.604 16.128H11.168L11.348 15.822V19.854L11.186 19.674H15.794C16.046 19.674 16.256 19.758 16.424 19.926C16.604 20.094 16.694 20.31 16.694 20.574C16.694 20.826 16.604 21.03 16.424 21.186C16.256 21.342 16.046 21.42 15.794 21.42H11.222L11.348 21.258V25.416L11.222 25.272H16.604C16.856 25.272 17.066 25.362 17.234 25.542C17.414 25.71 17.504 25.908 17.504 26.136C17.504 26.388 17.414 26.598 17.234 26.766C17.066 26.922 16.856 27 16.604 27H10.376C10.124 27 9.908 26.916 9.728 26.748C9.548 26.568 9.458 26.346 9.458 26.082V15.318C9.458 15.054 9.548 14.838 9.728 14.67C9.908 14.49 10.124 14.4 10.376 14.4ZM29.1912 14.4C29.4312 14.4 29.6232 14.484 29.7672 14.652C29.9232 14.808 30.0012 15.006 30.0012 15.246V26.082C30.0012 26.346 29.9112 26.568 29.7312 26.748C29.5632 26.916 29.3472 27 29.0832 27C28.9632 27 28.8312 26.976 28.6872 26.928C28.5552 26.88 28.4532 26.814 28.3812 26.73L20.9832 17.136L21.3972 16.902V26.172C21.3972 26.4 21.3192 26.598 21.1632 26.766C21.0072 26.922 20.8092 27 20.5692 27C20.3172 27 20.1132 26.922 19.9572 26.766C19.8132 26.598 19.7412 26.4 19.7412 26.172V15.318C19.7412 15.042 19.8312 14.82 20.0112 14.652C20.1912 14.484 20.4072 14.4 20.6592 14.4C20.7912 14.4 20.9292 14.43 21.0732 14.49C21.2292 14.538 21.3432 14.616 21.4152 14.724L28.6332 24.12L28.3632 24.372V15.246C28.3632 15.006 28.4412 14.808 28.5972 14.652C28.7532 14.484 28.9512 14.4 29.1912 14.4Z" fill="#F8F7E5"/>
+                </svg>
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <mask id="mask0_2207_315" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
+                <rect width="32" height="32" fill="#D9D9D9"/>
+                </mask>
+                <g mask="url(#mask0_2207_315)">
+                <path d="M5.33333 24C4.95556 24 4.63889 23.8722 4.38333 23.6167C4.12778 23.3611 4 23.0444 4 22.6667C4 22.2889 4.12778 21.9722 4.38333 21.7167C4.63889 21.4611 4.95556 21.3333 5.33333 21.3333H26.6667C27.0444 21.3333 27.3611 21.4611 27.6167 21.7167C27.8722 21.9722 28 22.2889 28 22.6667C28 23.0444 27.8722 23.3611 27.6167 23.6167C27.3611 23.8722 27.0444 24 26.6667 24H5.33333ZM5.33333 17.3333C4.95556 17.3333 4.63889 17.2056 4.38333 16.95C4.12778 16.6944 4 16.3778 4 16C4 15.6222 4.12778 15.3056 4.38333 15.05C4.63889 14.7944 4.95556 14.6667 5.33333 14.6667H26.6667C27.0444 14.6667 27.3611 14.7944 27.6167 15.05C27.8722 15.3056 28 15.6222 28 16C28 16.3778 27.8722 16.6944 27.6167 16.95C27.3611 17.2056 27.0444 17.3333 26.6667 17.3333H5.33333ZM5.33333 10.6667C4.95556 10.6667 4.63889 10.5389 4.38333 10.2833C4.12778 10.0278 4 9.71111 4 9.33333C4 8.95556 4.12778 8.63889 4.38333 8.38333C4.63889 8.12778 4.95556 8 5.33333 8H26.6667C27.0444 8 27.3611 8.12778 27.6167 8.38333C27.8722 8.63889 28 8.95556 28 9.33333C28 9.71111 27.8722 10.0278 27.6167 10.2833C27.3611 10.5389 27.0444 10.6667 26.6667 10.6667H5.33333Z" fill="#F8F7E5"/>
+                </g>
+                </svg>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="content_left">
+            <h2 class="fontEckzar">Core Kompetenzen</h2>
+            <div class="description fontQuicksand">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit assumenda perferendis esse sint quos dolor nisi aliquam officia incidunt impedit.
+            </div>
+            <div class="animation">
+                <img class="sun" src="assets/animation_wheels/orange_sun.svg" alt="">
+                <img class="icon" src="assets/emojis/learning.svg" alt="">
+            </div>
+        </div>
+        <div class="content_right fontQuicksand">
+                @for (icon of icons; track $index) {
+                    <div class="frontend_icons">
+                        <img src="{{ icon.path }}" alt="">
+                        <span>{{ icon.description }}</span>
+                    </div>
+                }
+            
+        </div>
+        <div class="scroll_bar">
+            <img src="assets/sidebar/Property 1=Skills.svg" alt="">
+        </div>
+    </div>
+
+
+</section>
