--- a/src/app/main-content/work/work.component.scss
+++ b/src/app/main-content/work/work.component.scss
@@ -1,6 +1,107 @@
-p {
+section {
+    background-color: #F8F7E5;
     height: 100vh;
     width: 100%;
-    background-color: burlywood;
     scroll-snap-align: start;
+}
+
+.navbar {
+    height: 88px;
+    padding: 24px 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1440px;
+}
+
+.menu {
+    display: flex;
+    width: 88px;
+    height: 40px;
+    gap: 16px;
+}
+
+.content {
+    max-width: 1440px;
+    padding-left: 72px;
+    padding-right: 72px;
+    height: calc(100vh - 88px);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    margin-right: 40px;
+}
+
+.headline {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+    height: 102px;
+    width: 942px;
+    margin-top: 72px;
+}
+
+h2 {
+    line-height: 72px;
+    white-space: nowrap;
+}
+
+.slider {
+    height: 488px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 112px;
+    gap: 40px;
+}
+
+.screenshot {
+    border: 1px solid #1d1d1d;
+    border-radius: 4px;
+    background-color: #f9af43;
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    >.project_image {
+        width: 90%;
+        z-index: 20;
+    }
+    >.wheel {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 10;
+    }
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    background-color: #1d1d1d;
+    border-radius: 4px;
+    color:#F8F7E5;
+    padding: 32px;
+    >.interactiv_btns {
+        display: flex;
+        gap: 40px;
+    }
+}
+
+.arrows {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color:#1d1d1d;
+    font-weight: 700;
+    margin-top: 32px;
 }
