--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@
   }
 
   * {
-    margin:0;
+    margin: 0;
     box-sizing: border-box;
   }
 
@@ -43,4 +43,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+}
+
+h2 {
+  font-weight:700;
+  font-size: 72px;
+}
+
+.scroll_bar {
+  display: block;
+  margin-top: auto;
+  margin-bottom: auto;
 }
