section References styled

--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -19,7 +19,39 @@
         </div>
     </div>
 
-    <div class="content">
-        
+    <div class="content fontQuicksand">
+        <div class="references">
+            <h2 class="fontEckzar">Was andere über mich sagen:</h2>
+            <div class="boxes">
+
+                <div class="nr_one">
+                    <div class="box">
+                        <p class="name">Anna Mustermann</p>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</p>
+                        <p class="occupation">Frontend Developerin</p>
+                    </div>
+                </div>
+                
+                <div class="nr_two">
+                    <div class="box">
+                        <p class="name">Lena Schneider</p>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</p>
+                        <p class="occupation">Frontend Developerin</p>
+                    </div>
+                </div>
+                
+                <div nr="nr_three">
+                    <div class="box">
+                        <p class="name">Josef Novak</p>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</p>
+                        <p class="occupation">Frontend Developer</p>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        <div class="scroll_bar">
+            <img src="assets/sidebar/Property 1=References.svg" alt="">
+        </div>
     </div>
 </section>
