--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -4,3 +4,66 @@ section {
     width: 100%;
     scroll-snap-align: start;
 }
+
+.navbar {
+    height: 88px;
+    padding: 24px 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1440px;
+}
+
+.menu {
+    display: flex;
+    width: 88px;
+    height: 40px;
+    gap: 16px;
+}
+
+.content {
+    max-width: 1440px;
+    padding-left: 112px;
+    padding-right: 72px;
+    height: calc(100vh - 88px);
+    display: flex;
+    color:#f8f7e5;
+}
+
+.references {
+    display: flex;
+    flex-direction: column;
+}
+
+h2 {
+    line-height: 72px;
+    margin-top: 92px;
+}
+
+.boxes {
+    display: flex;
+    justify-content: space-between;
+    height: 472px;
+    margin-top: 48px;
+    gap: 40px;
+    padding-right: 40px;
+}
+
+.box {
+    border: 1px solid #f8f7e5;
+    border-radius: 4px;
+    padding: 32px;
+}
+
+.nr_two {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nr_three {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
