styling of section reviews

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -1,6 +1,37 @@
-p {
+section {
+    background-color: #1D1D1D;
     height: 100vh;
     width: 100%;
-    background-color: darkorange;
     scroll-snap-align: start;
+    color: #F8F7E5;
+}
+
+.navbar {
+    height: 88px;
+    padding: 24px 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1440px;
+}
+
+.menu {
+    display: flex;
+    width: 88px;
+    height: 40px;
+    gap: 16px;
+}
+
+.content {
+    max-width: 1440px;
+    height: calc(100vh - 88px);
+    padding-left: 112px;
+    padding-right: 72px;
+    height: calc(100vh - 88px);
+    display: flex;
+    flex-direction: row;
+}
+
+h2 {
+    margin-top: 72px;
 }
