--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -25,27 +25,15 @@
             <div class="boxes">
 
                 <div class="nr_one">
-                    <div class="box">
-                        <p class="name">Anna Mustermann</p>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</p>
-                        <p class="occupation">Frontend Developerin</p>
-                    </div>
+                    <app-first-review></app-first-review>
                 </div>
                 
                 <div class="nr_two">
-                    <div class="box">
-                        <p class="name">Lena Schneider</p>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</p>
-                        <p class="occupation">Frontend Developerin</p>
-                    </div>
+                    <app-second-review></app-second-review>
                 </div>
                 
                 <div nr="nr_three">
-                    <div class="box">
-                        <p class="name">Josef Novak</p>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</p>
-                        <p class="occupation">Frontend Developer</p>
-                    </div>
+                    <app-third-review></app-third-review>
                 </div>
                 
             </div>
