--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -49,21 +49,16 @@ h2 {
     padding-right: 40px;
 }
 
-.box {
-    border: 1px solid #f8f7e5;
-    border-radius: 4px;
-    padding: 32px;
+.nr_one {
+    align-self: flex-start;
 }
 
 .nr_two {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    align-self: center;
 }
 
 .nr_three {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    align-self: flex-end;
 }
+
 
