contact section styled

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -19,7 +19,23 @@
         </div>
     </div>
 
-    <div class="content">
-        
+    <div class="content fontQuicksand">
+        <div class="content_left">
+            <h2 class="fontEckzar">Lass uns zusammen<br> ein tolles Projekt <br>starten!</h2>
+            <div>
+                <p class="colorize">Got a problem to solve?</p><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quod, molestiae debitis in placeat odio!</p>
+            </div>
+        </div>
+        <div class="content_right">
+            <div class="formular">
+                <app-formular></app-formular>
+            </div>
+        </div>
+        <div class="scroll_bar">
+            <img src="assets/sidebar/Property 1=Contact_me.svg" alt="">
+        </div>
     </div>
+    <div><app-footer></app-footer></div>
+    
 </section>
