--- a/src/app/main-content/reviews/second-review/second-review.component.html
+++ b/src/app/main-content/reviews/second-review/second-review.component.html
@@ -1,10 +1,9 @@
 <div class="box">
     <div class="border">
-        <p class="name bold">Leon Blazek</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</p>
-        <br>
-        <p class="bold">Frontend Developer</p>
+        <div class="name font_bold">Leon Blazek</div>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</div>
+        <div class="bold">Frontend Developerin</div>
     </div>
-    <span class="link bold">Zum Linkedin Profile >></span>
+    <span class="link font_bold">Zum Linkedin Profile >></span>
 </div>
+
