--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -32,7 +32,7 @@
                     <app-second-review></app-second-review>
                 </div>
                 
-                <div nr="nr_three">
+                <div class="nr_three">
                     <app-third-review></app-third-review>
                 </div>
                 
