--- a/src/app/main-content/reviews/second-review/second-review.component.scss
+++ b/src/app/main-content/reviews/second-review/second-review.component.scss
@@ -2,19 +2,23 @@
     width: fit-content;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    gap: 20px;
 }
 
 .border {
     border: 1px solid #f8f7e5;
-    border-radius: 4px;
-    padding: 32px;
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .link {
     width: 100%;
     text-align: end;
     padding: 8px;
-    font-weight: bold;
 }
 
 .name {
