--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -37,5 +37,6 @@
         </div>
     </div>
     <div><app-footer></app-footer></div>
-    
+    <img class="blue_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
+    <img class="orange_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
 </section>
