--- a/src/app/main-content/contact/formular/formular.component.html
+++ b/src/app/main-content/contact/formular/formular.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="checking">
                 <input class="checkmark" type="checkbox">
-                <span class="legal_information">  I´ve read the privacy policy and agree to the processing of my data.</span>
+                <span class="legal_information">  I´ve read the <a href="data_protection">privacy policy</a> and agree to the processing of my data.</span>
         </div>
     </div>
     <div class="drop_line"><button class="btn">Drop a line</button></div>
