--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -24,7 +24,7 @@ section {
 
 .content {
     max-width: 1440px;
-    height: calc(100vh - 88px);
+    height: calc(100vh - 88px - 173px);
     padding-left: 112px;
     padding-right: 72px;
     height: calc(100vh - 88px);
@@ -43,6 +43,7 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 64px;
+    position: relative;
 }
 
 .content_rigth {
@@ -51,4 +52,21 @@ h2 {
 
 .formular {
     margin-top: 275px;
+}
+
+.blue_sun {
+    position: absolute;
+    height: 263px;
+    bottom: 0;
+    left: 190px;
+    >path {
+        fill: #679aac !important;
+    }
+}
+
+.orange_sun {
+    position: absolute;
+    height: 144px;
+    bottom: 0;
+    left: 112px;
 }
