--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,13 +1,12 @@
 <div class="portfolio_footer fontQuicksand">
-        <div class="animated_wheels">
-            <img class="blue_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
-            <img class="orange_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
+        <div class="animated_wheels oneThird">
+            
         </div>
-        <div class="name_copyright">
+        <div class="name_copyright oneThird">
             ©Barbora Lambeinova 2025
         </div>
-        <div class="links">
-            <a href="#impressum">Impressum</a>
+        <div class="links oneThird">
+            <a href="impressum">Impressum</a>
             <a href="www.linkedin.com/in/barbora-lambeinova-11b398352" target="_blank">LinkedIn</a>
             <a href="https://github.com/BaraDroid" target="_blank">Git Hub</a>
         </div>
