ngModule added to contact form

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -36,7 +36,7 @@
             <img src="assets/sidebar/Property 1=Contact_me.svg" alt="">
         </div>
     </div>
-    <div><app-footer></app-footer></div>
-    <img class="blue_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
-    <img class="orange_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
+    <img class="blue_sun" src="assets/animation_wheels/orange_sun.svg" alt="">
+    <img class="orange_sun" src="assets/animation_wheels/orange_sun.svg" alt="">
+    <app-footer></app-footer>
 </section>
