--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -27,7 +27,7 @@
             </div>
             <div class="slider">
                 <div class="screenshot">
-                    <img class="project_image" src="./assets/screenshots/pokedex.png" alt="">
+                    <img class="project_image" src="assets/screenshots/pokedex.png" alt="">
                     <img class="wheel" src="assets/animation_wheels/orange_sun.svg" alt="">
                 </div>
                 <div class="description fontQuicksand">
