--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -53,7 +53,7 @@ h2 {
     width: 600px;
     height: 250px;
     position: absolute;
-    top: calc(100vh + 490px);
+    top: 490px;
     left: 500px;
     color: #F8F7E5;
 }
