--- a/src/app/main-content/contact/formular/formular.component.html
+++ b/src/app/main-content/contact/formular/formular.component.html
@@ -1,25 +1,34 @@
-<div class="formular">
+<form class="formular" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
     <div class="your_info">
         <div class="name_email">
-            <span>What´s your name?</span>
-            <input type="text" placeholder="Your name goes here" required name="name" [(ngModel)] = "myForm.name">
+            <label for="name">What´s your name?</label>
+            <input #name="ngModel" minLength="4" [(ngModel)]="contactData.name" type="text" placeholder="Your name goes here" required name="name" >
+            @if(!name.valid && name.touched) {
+                <span>Please enter your name</span>
+            }
         </div>
         <div class="name_email">
-            <span>What´s your email?</span>
-            <input type="text" placeholder="your email@email.com" required name="email">
+            <label for="email">What´s your email?</label>
+            <input #email="ngModel" [(ngModel)]="contactData.email" type="text" placeholder="your email@email.com" required name="email" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}">
+            @if(!email.valid && email.touched){
+                <span>Please enter your email</span>
+            }
         </div>
     </div>
     <div class="message">
         <div class="name_email">
-            <span>How can i help you?</span>
-            <input type="text" placeholder="Hello Barbora, I am interested in..." required name="message">
+            <label for="message">How can i help you?</label>
+            <textarea #message="ngModel" minLength="4" [(ngModel)]="contactData.message" name="message" placeholder="Hello Barbora, I am interested in..." required id="message"></textarea>
+            @if(!message.valid && message.touched){
+                <span>Please enter a message</span>
+            }
         </div>
         <div class="checking">
-                <input class="checkmark" type="checkbox" required>
+                <input type="checkbox" required>
                 <span class="legal_information">  I´ve read the <a href="data_protection">privacy policy</a> and agree to the processing of my data.</span>
         </div>
     </div>
-    <div class="drop_line"><button (click)="sendEmail()" class="btn">Drop a line</button></div>
-</div>
+    <div class="drop_line"><input type="submit" value="Drop a line"></div>
+</form>
     
 
