--- a/src/app/main-content/contact/formular/formular.component.scss
+++ b/src/app/main-content/contact/formular/formular.component.scss
@@ -27,7 +27,7 @@
     align-items: center;
 }
 
-input {
+textarea {
     font-family: 'Quicksand';
     color: #f8f7e5;
     font-size: 16px;
@@ -37,12 +37,22 @@ input {
     padding: 16px;
 }
 
-.checkmark {
-    border: 1px solid #f9af41;
+input[type=text] {
+    font-family: 'Quicksand';
+    color: #f8f7e5;
+    font-size: 16px;
+    background-color: #1d1d1d;
+    border: none;
+    border-bottom: 1px solid #f9af41;
+    padding: 16px;
+}
+
+input[type=checkbox] {
+    border: 3px solid #f9af41;
     background-color: #1d1d1d;
 }
 
-span {
+label {
     font-size: 24px;
     font-weight: bold;
 }
@@ -55,4 +65,23 @@ span {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+input[type=submit] {
+    background-color:rgba(103, 154, 172, 0);;
+        // margin-top: 16px;
+        // margin-bottom: 16px;
+        padding: 12px 24px;
+        border: 1px solid #F8F7E5;
+        border-radius: 100px;
+        width: 155px;
+        height: 40px;
+        color: #F8F7E5;
+        font-size: 18px;
+        font-family: 'Quicksand';
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        cursor: pointer;
 }
