common navbar added

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="navbar">
+    <!-- <div class="navbar">
         <div class="name">
             <span>Lambeinova</span>
         </div>
@@ -17,7 +17,9 @@
                 </g>
                 </svg>
         </div>
-    </div>
+    </div> -->
+
+    <app-common-navbar></app-common-navbar>
 
     <div class="content">
         <img src="assets/imgs/about_me_crop.png" alt="">
