--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -5,22 +5,22 @@ section {
     scroll-snap-align: start;
 }
 
-.navbar {
-    height: 88px;
-    padding: 24px 72px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1440px;
-}
+// .navbar {
+//     height: 88px;
+//     padding: 24px 72px;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     max-width: 1440px;
+// }
 
-.menu {
-    display: flex;
-    width: 88px;
-    height: 40px;
-    gap: 16px;
-    >svg {cursor: pointer;}
-}
+// .menu {
+//     display: flex;
+//     width: 88px;
+//     height: 40px;
+//     gap: 16px;
+//     >svg {cursor: pointer;}
+// }
 
 .content {
     max-width: 1440px;
