--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-common-navbar></app-common-navbar>
+    <app-common-navbar [whiteColor] = "isWhite"></app-common-navbar>
 
     <div class="content fontQuicksand">
         <div class="references">
