--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-common-navbar></app-common-navbar>
+    <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
         <div class="content_left">
