--- a/src/app/main-content/contact/formular/formular.component.scss
+++ b/src/app/main-content/contact/formular/formular.component.scss
@@ -62,16 +62,12 @@ label {
 }
 
 .drop_line {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-input[type=submit] {
-    background-color:rgba(103, 154, 172, 0);;
-        // margin-top: 16px;
-        // margin-bottom: 16px;
-        padding: 12px 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    >input {
+        background-color:rgba(103, 154, 172, 0);
         border: 1px solid #F8F7E5;
         border-radius: 100px;
         width: 155px;
@@ -82,6 +78,6 @@ input[type=submit] {
         display: flex;
         justify-content: center;
         align-items: center;
-        text-align: center;
         cursor: pointer;
+}
 }
