--- a/src/app/shared/main-navbar/main-navbar.component.scss
+++ b/src/app/shared/main-navbar/main-navbar.component.scss
@@ -16,6 +16,22 @@
     }
 }
 
+.github_icon {
+    position: absolute;
+}
+
+.linkedin_icon {
+    position: absolute;
+    left: 32px;
+}
+
+.mailIcon {
+    position: absolute;
+    left: 64px;
+}
+
+
+
 .menu {
     display: flex;
     width: 88px;
