--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div id="portfolioStart" class="navbar">
 	<div class="icons">
 		<a (mouseover)="githubIconHover = true"
 			(mouseleave)="githubIconHover = false"
@@ -82,9 +82,7 @@
 			</svg>
 		</a>
 	</div>
-	<div class="name">
-		<span>Lambeinova</span>
-	</div>
+	<a href="#portfolioStart"><img class="personal_logo" src="assets/logo/logo_white_nobg.png" alt="logo in white"></a>	
 	<div class="menu">
 		<svg width="40"
 			height="40"
