--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -19,7 +19,7 @@
         </div>
     </div> -->
 
-    <app-common-navbar></app-common-navbar>
+    <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
         <img src="assets/imgs/about_me_crop.png" alt="">
