--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -27,6 +27,9 @@ a {
     cursor: pointer;
     color: #f8f7e5;
     font-family: 'Quicksand';
+    &:hover {
+        color: #ff824e;
+    }
 }
 
 .oneThird {
