--- a/src/app/shared/common-navbar/common-navbar.component.scss
+++ b/src/app/shared/common-navbar/common-navbar.component.scss
@@ -18,3 +18,61 @@
 .personal_logo {
     height: 38px;
 }
+
+.menu_tab {
+    position: absolute;
+    top: 12px;
+    right: -3000px;
+    z-index: 15;
+    height: 222px;
+    width: 208px;
+    border-radius: 4px;
+    border: 1px solid #1d1d1d;
+    padding: 16px;
+    background-color: #f8f7e5;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    
+}
+
+.menu_open {
+    transition: 0.4s;
+    position: absolute;
+    top: 12px;
+    right: 50px;
+    z-index: 15;
+}
+
+.heading {
+    display: flex;
+    justify-content: space-between;
+    >span {
+        color: #679aac;
+        font-weight: bold;
+        font-size: 22px;
+    }
+    >svg {
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
+.links_list {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    >a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: #1d1d1d;
+        &:hover {
+            color: #679aac;
+        }
+        >img {
+            height: 22px;
+        }
+    }
+}
