onclick function for menu debugged in the sections, where it wasn´t going well

--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -97,7 +97,7 @@
 		}
 		
 		@if (menuHover) {
-			<svg (mouseover)="menuHover = true"
+			<svg (click)="openMenuTab()" (mouseover)="menuHover = true"
 			(mouseleave)="menuHover = false" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<mask id="mask0_2207_324" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
 				<rect width="32" height="32" fill="#D9D9D9"/>
@@ -108,7 +108,7 @@
 				</svg>
 		}
 		@else {
-			<svg (mouseover)="menuHover = true"
+			<svg (click)="openMenuTab()" (mouseover)="menuHover = true"
 		(mouseleave)="menuHover = false" width="32"
 			height="32"
 			viewBox="0 0 32 32"
