menu tab closes, if I click on the link in the menu

--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -7,7 +7,7 @@
                 <h1 class="fontEckzar">Barbora Lambeinova</h1>
                 <span class="fontQuicksand">Frontend Developer</span>
             </div>
-            <button class="btn fontQuicksand">Get in Touch</button>
+            <a href="#contact"><button class="btn fontQuicksand">Get in Touch</button></a>
             <img src="assets/animation_wheels/scroll_sun.svg" alt="">
         </div>
         <div class="atf_right">
