--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="competences">
     <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
