--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="references">
     <app-common-navbar [whiteColor] = "isWhite"></app-common-navbar>
 
     <div class="content fontQuicksand">
