--- a/src/app/shared/common-navbar/common-navbar.component.html
+++ b/src/app/shared/common-navbar/common-navbar.component.html
@@ -116,11 +116,11 @@
             
         </div>
         <div class="links_list">
-            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="section_about">@if(showWheelAbout){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}About me</a>
-            <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="section_competences">@if(showWheelSkills){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Skills</a>
-            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="section_my_work">@if(showWheelPortfolio){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
-            <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="section_references">@if(showWheelRef){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}References</a>
-            <a (mouseenter)="showWheelContact = true" (mouseleave)="showWheelContact = false" href="section_contact">@if(showWheelContact){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Contact me</a>
+            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()">@if(showWheelAbout){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}About me</a>
+            <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="#competences" (click)="closeMenuTab()">@if(showWheelSkills){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Skills</a>
+            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#my_work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
+            <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="#references" (click)="closeMenuTab()">@if(showWheelRef){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}References</a>
+            <a (mouseenter)="showWheelContact = true" (mouseleave)="showWheelContact = false" href="#contact" (click)="closeMenuTab()">@if(showWheelContact){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Contact me</a>
         </div>
     </div>
 </div>
