main-navbar component completely responsive

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -2,7 +2,7 @@
     <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
-        <img src="assets/imgs/about_me_crop.png" alt="">
+        <div class="left_side"><img src="assets/imgs/about_me_crop.png" alt=""></div>
         <div class="right_side">
             <h2 class="fontEckzar">About me</h2>
             <div class="scroll_bar">
