--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,29 +1,15 @@
 section {
     background-color: #F8F7E5;
-    height: 100vh;
-    width: 100%;
+    height: 100dvh;
+    width: 100dvw;
     scroll-snap-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-// .navbar {
-//     height: 88px;
-//     padding: 24px 72px;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     max-width: 1440px;
-// }
-
-// .menu {
-//     display: flex;
-//     width: 88px;
-//     height: 40px;
-//     gap: 16px;
-//     >svg {cursor: pointer;}
-// }
-
 .content {
-    max-width: 1440px;
+    width: 100dvw;
     max-width: 1440px;
     padding-left: 72px;
     padding-right: 72px;
@@ -31,13 +17,21 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.left_side {
     >img {
         margin-left: 40px;
+        object-fit: contain;
+        height: 100%;
     }
 }
 
 .right_side {
     display: flex;
+    width: 100%;
+    justify-content: space-between;
+
 }
 
 h2 {
@@ -45,6 +39,8 @@ h2 {
     font-size: 72px;
     font-weight: 700;
     color: #1D1D1D;
+    margin-left: calc(100% - 313px);
+    white-space: nowrap;
 }
 
 .text_over {
