--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -1,9 +1,13 @@
 section {
     background-color: #1D1D1D;
-    height: 100vh;
-    width: 100%;
     scroll-snap-align: start;
     color: #F8F7E5;
+    height: 100dvh;
+    width: 100dvw;
+    scroll-snap-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .navbar {
