--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -1,7 +1,10 @@
 .main_content{
-    scroll-snap-type: y mandatory;
+    // scroll-snap-type: y mandatory;
     height: 100vh; 
-    overflow: auto; 
+    overflow-x: hidden; 
     scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
