--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -1,8 +1,12 @@
 section {
     background-color: #679AAC;
-    height: 100vh;
-    width: 100%;
     scroll-snap-align: start;
+    height: 100dvh;
+    width: 100dvw;
+    scroll-snap-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .navbar {
