--- a/src/app/shared/common-navbar/common-navbar.component.scss
+++ b/src/app/shared/common-navbar/common-navbar.component.scss
@@ -1,5 +1,6 @@
 .navbar {
     height: 88px;
+    width: 100dvw;
     padding: 24px 72px;
     display: flex;
     justify-content: space-between;
@@ -33,10 +34,12 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    
+    display: none;
 }
 
 .menu_open {
+    display: flex;
+    flex-direction: column;
     transition: 0.4s;
     position: absolute;
     top: 12px;
