--- a/src/app/shared/main-navbar/main-navbar.component.scss
+++ b/src/app/shared/main-navbar/main-navbar.component.scss
@@ -1,5 +1,6 @@
 .navbar {
     height: 88px;
+    width: 100dvw;
     padding: 24px 72px;
     display: flex;
     justify-content: space-between;
@@ -18,6 +19,8 @@
 
 .menu {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 88px;
     height: 40px;
     gap: 16px;
@@ -31,7 +34,8 @@
 .menu_tab {
     position: absolute;
     top: 12px;
-    right: -3000px;
+    right: -5000px;
+    top: -500px;
     z-index: 15;
     height: 222px;
     width: 208px;
@@ -42,15 +46,19 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    display: none;
     
 }
 
 .menu_open {
+    display: flex;
+    flex-direction: column;
     transition: 0.4s;
     position: absolute;
     top: 12px;
     right: 50px;
     z-index: 15;
+    box-sizing: border-box;
 }
 
 .heading {
@@ -77,11 +85,53 @@
         align-items: center;
         text-decoration: none;
         color: #1d1d1d;
+        box-sizing: border-box;
         &:hover {
             color: #679aac;
+            box-sizing: border-box;
         }
         >img {
-            height: 22px;
+            height: 20px;
         }
+    }
+}
+
+.icons_list {
+    display: none;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+@media (max-width: 830px) {
+    .personal_logo {
+        height: 30px;
+}
+}
+
+@media (max-width: 700px) {
+    .menu {>svg{height: 35px;}}
+    .icons {>svg{height: 27px;}}
+}
+
+@media(max-width: 600px) {
+    .icons {display: none;}
+    .menu_open{
+        height: 270px;
+    }
+    .icons_list {
+        display: flex;
+    }
+
+}
+
+@media(max-width: 450px){
+    .navbar {
+        height: 72px;
+        padding: 24px 16px;
+    }
+    .menu_open {
+        right: 3px;
+        top: 0; 
     }
 }
