responsiveness in competences component

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,7 +1,7 @@
 section {
     background-color: #F8F7E5;
     height: 100dvh;
-    width: 100dvw;
+    width: 100%;
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
