--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -2,14 +2,15 @@
     <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
+        <div class="wrapper">
         <div class="content_left">
             <h2 class="fontEckzar">Core Kompetenzen</h2>
             <div class="description fontQuicksand">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit assumenda perferendis esse sint quos dolor nisi aliquam officia incidunt impedit.
             </div>
             <div class="animation">
-                <img class="sun" src="assets/animation_wheels/orange_sun.svg" alt="">
-                <img class="icon" src="assets/emojis/learning.svg" alt="">
+                <img class="learning_sun" src="assets/animation_wheels/orange_sun.svg" alt="">
+                <img class="learning_icon" src="assets/emojis/learning.svg" alt="">
             </div>
         </div>
         <div class="content_right fontQuicksand">
@@ -21,6 +22,7 @@
                 }
             
         </div>
+    </div>
         <div class="scroll_bar">
             <img src="assets/sidebar/Property 1=Skills.svg" alt="">
         </div>
