--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,11 @@
     scroll-behavior: smooth;
   }
 
+  html {
+    margin: 0;
+    padding: 0;
+  }
+
   .fontQuicksand {
     font-family: 'Quicksand';
   }
